@@ -1,6 +1,12 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.12.2 (unreleased)
+  - Fix Import/Export not recognising correctly the imported services.
+  - Fix snippets pagination
+  - Fix List-Unsubscribe header in emails
+  - Fix an issue with the "Commits" section of the cycle analytics summary. !6513
+  - Fix errors importing project feature and milestone models using GitLab project import
+  - Make JWT messages Docker-compatible
 
 v 8.12.1
   - Fix a memory leak in HTML::Pipeline::SanitizationFilter::WHITELIST
